--- a/AngularFrontEnd/projects/features/src/app/authorize/unauthorize/unauthorize.component.html
+++ b/AngularFrontEnd/projects/features/src/app/authorize/unauthorize/unauthorize.component.html
@@ -1,1 +1,4 @@
-<h1 style="color: red;">BẠN KHÔNG CÓ QUYỀN HẠN ĐỂ TRUY CẬP VÀO ĐƯỜNG DẪN NÀY!!!</h1>
+<div class="ml-5 mt-5">
+    <h1 style="color: red; font-weight: bolder;">BẠN KHÔNG CÓ QUYỀN HẠN ĐỂ TRUY CẬP VÀO ĐƯỜNG DẪN NÀY!!!</h1>
+    <h1><a [routerLink]="['/home-page']" routerLinkActive="active"><b>Trở về trang chủ</b></a> </h1>           
+</div>
