--- a/AngularFrontEnd/projects/features/src/app/home-page/home-page.component.html
+++ b/AngularFrontEnd/projects/features/src/app/home-page/home-page.component.html
@@ -12,7 +12,7 @@
                           <div class="discount"><p>-{{ product.discount }}%</p></div>
                           <div class="border-text">
                             <div pTooltip="{{ product.productName }}" tooltipPosition="bottom" class="long-text">{{ product.productName }}</div>
-                            <span>{{ product.price - (product.price * product.discount) / 100 | currency : "VND" }}</span><br/>
+                            <span>{{ product.price - (product.price * product.discount) / 100 | currency: "VND" }}</span><br/>
                             <span>Đã bán: <span style="color: red;">{{ product.soldQuantityPerMonth }}</span>/{{product.soldQuantity}}</span><br/>
                           </div>
                       </div>
@@ -26,8 +26,12 @@
           <div class="card">
               <p-tabMenu [model]="lstCate" [activeItem]="activeCate">
                   <ng-template pTemplate="item" let-item let-i="index">
-                      <img [src]="createImgPath(item.image, item.id)" alt="Image" height="40" style="margin-right: 10px; border-radius: 10px;" (click)="handleChangeCate(item.id)" />
-                      <p (click)="handleChangeCate(item.id)">{{ item.categoryName }}</p>
+                    <div pTooltip="{{item.description}}" tooltipPosition="bottom">
+                        <div style="display: flex; justify-content: center;">
+                            <img  [src]="createImgPath(item.image, item.id)" alt="Image" height="40" style="margin-right: 10px; border-radius: 10px;" (click)="handleChangeCate(item.id)" />
+                        </div>
+                        <p (click)="handleChangeCate(item.id)">{{ item.categoryName }}</p>
+                    </div>
                   </ng-template>
               </p-tabMenu>
           </div>
