--- a/AngularFrontEnd/projects/features/src/app/home-page/home-page.component.scss
+++ b/AngularFrontEnd/projects/features/src/app/home-page/home-page.component.scss
@@ -166,3 +166,6 @@ div.discount {
   height: auto; 
   width: auto;
 }
+.p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link {
+  padding: 0.2rem;
+}
