--- a/AngularFrontEnd/projects/features/src/app/order/listOrder/listOrder.component.html
+++ b/AngularFrontEnd/projects/features/src/app/order/listOrder/listOrder.component.html
@@ -4,6 +4,7 @@
   [loading]="loading">   
   <ng-template pTemplate="header">
     <tr>
+      <th>Mã đơn hàng</th>
       <th>Số sản phẩm</th>
       <th>Thời gian đặt hàng</th>
       <th>Phương thức nhận hàng</th>
@@ -14,6 +15,7 @@
   </ng-template>
   <ng-template pTemplate="body" let-order>
     <tr>
+      <td>{{ order.id }}</td>
       <td>{{ order.productCount }}</td>
       <td>{{ order.orderDate | date : "hh:mm:ss a, dd/MM/yyyy" }}</td>
       <td>{{ order.payment }}</td>
@@ -52,6 +54,9 @@
           <mat-form-field class="mt-3 comments">
             <mat-label>Đánh giá</mat-label>
             <textarea matInput formControlName="Comments" type="string" rows="4" cols="60"></textarea>
+            <mat-error *ngIf="feedback.get('Comments')?.hasError('maxlength')">
+              Số lượng kí tự tối đa là 255!
+          </mat-error>  
           </mat-form-field>
         </div>
         <hr style="margin-top: -0.5rem;">
