add note phản biện và fix bug phản biện

--- a/AngularFrontEnd/projects/features/src/app/login/login.component.html
+++ b/AngularFrontEnd/projects/features/src/app/login/login.component.html
@@ -36,7 +36,7 @@
       <label class="mt-2">Bạn là:</label>
       <mat-radio-group [(ngModel)]="userRole" (change)="handleUserRole($event)">
         <mat-radio-button value="admin">Quản trị viên</mat-radio-button>
-        <mat-radio-button value="user" [checked]="true">Người dùng</mat-radio-button>
+        <mat-radio-button value="user" [checked]="true">Khách hàng</mat-radio-button>
       </mat-radio-group>
     </div>
    
