--- a/AngularFrontEnd/projects/features/src/app/admin-user/admin-user.component.html
+++ b/AngularFrontEnd/projects/features/src/app/admin-user/admin-user.component.html
@@ -34,7 +34,7 @@
                                         (click)="setManagerPermisson(rowData)" [pTooltip]="handleTooltipSetManager(rowData)"></button>
                                     </td> 
                                 </span>
-                                <span *ngSwitchCase="'boolean'" pTooltip="{{ rowData[col.field] == true ? 'Hiện' : 'Ẩn' }}" tooltipPosition="bottom">{{ rowData[col.field] == true ? 'Hiện' : 'Ẩn' }}</span>
+                                <span *ngSwitchCase="'boolean'" pTooltip="{{ rowData[col.field] == true ? 'Hoạt động' : 'Khoá' }}" tooltipPosition="bottom">{{ rowData[col.field] == true ? 'Hoạt động' : 'Khoá' }}</span>
                                 <span *ngSwitchDefault pTooltip="{{rowData[col.field]}}" tooltipPosition="bottom" >{{ rowData[col.field] }}</span> 
                             </span>                   
                             </td>
